--- a/builder-debug.yml
+++ b/builder-debug.yml
@@ -6,6 +6,8 @@ x64:
     - main.js
     - service/*
     - public/*
+    - public/assets/*
+    - public/assets/bank/*
     - preload.js
     - config.js
     - package.json
@@ -21,6 +23,8 @@ x64:
     - main.js
     - service/*
     - public/*
+    - public/assets/*
+    - public/assets/bank/*
     - preload.js
     - config.js
     - package.json
@@ -99,7 +103,7 @@ nsis:
       !insertmacro MUI_LANGUAGE "Vietnamese"
     !macroend
 
-    !include "C:\Users\RUNNER~1\AppData\Local\Temp\t-4poehM\0-messages.nsh"
+    !include "C:\Users\RUNNER~1\AppData\Local\Temp\t-Q2rXAs\0-messages.nsh"
     !addplugindir /x86-unicode "C:\Users\runneradmin\AppData\Local\electron-builder\Cache\nsis\nsis-resources-3.4.1\plugins\x86-unicode"
 
     Var newStartMenuLink
